# django-vite

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: pre-commit.yml  pypi_publish.yml  test.yml
django_vite/: __init__.py  apps.py  conf.py  exceptions.py  loader.py
django_vite/core/: asset_loader.py  tag_generator.py
django_vite/templatetags/: base.py  django_vite.py  jinja.py
tests/: conftest.py  settings.py  test_singleton.py  test_templatetags.py
tests/data/external_vue_app/: manifest.json
tests/data/named_assets/: one.js  package.json  vite.config.js
tests/data/staticfiles/: circular-imports.json  custom-motif-polyfills-manifest.json  dynamic-entry-manifest.json  manifest.json  polyfills-manifest.json
tests/data/staticfiles/custom/prefix/: manifest.json
tests/tests/: test_asset_loader.py  test_custom_app_client_class.py
tests/tests/jinja/: test_vite_asset.py  test_vite_asset_url.py  test_vite_hmr_client.py  test_vite_legacy_asset.py  test_vite_legacy_polyfills.py  test_vite_preload_asset.py  test_vite_react_refresh.py
tests/tests/templatetags/: test_vite_asset.py  test_vite_asset_url.py  test_vite_hmr_client.py  test_vite_legacy_asset.py  test_vite_legacy_polyfills.py  test_vite_preload_asset.py  test_vite_react_refresh.py
