[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-vite"
dynamic = ["version"]
description = "Integration of Vite in a Django project."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "MrBin99" }]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "black",
]

[project.urls]
Homepage = "https://github.com/MrBin99/django-vite"

[tool.hatch.version]
path = "django_vite/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_vite",
    "/tests",
    "LICENSE",
    "README.md",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = "."
addopts = '''
  --cov=django_vite
  --cov-report html
  --cov-report term-missing
  --cov-branch
'''
filterwarnings = "ignore::DeprecationWarning:django_vite.*"

[tool.black]
line-length = 88

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "C",   # pyupgrade
  "B",   # bugbear,
  "PT",  # pytest,
  "SIM", # simplify,
  "DJ",  # django,
  "I",   # isort
]

# do not autofix the following violations due to bad DX:
unfixable = [
  "F401", # Module imported but unused
  "F841", # Unused variables
]
